Revision history for VMware::API::LabManager

VERSIONTAG  DATETAG

2.04  2014/02/19

  Improved:
    Changed 'Crypt::SSLeay' prerequisite to 'Net:SSL'
    Removed the RCS style 'Revision' version info from the example scripts

2.03  2014/02/18

  Corrected:
    %ENV workaround did not need BEGIN block or "our" context.
    Added explicit declaration of Net::SSL to help with self-signed certs

2.01  2010/12/09

  Corrected:
    Call of Data::Dumper without instancing the module.

  Improved:
    Added -I to example scripts for local execution within the distribution
    Added a %ENV workaround for self-signed certs due to changes in LWP

1.10  2010/09/17

  Added:
    Example configuration to POD.

  Corrected:
    Quoting error in unknown parameter warning for config()

  Improved:
    Minor POD cleanups.
    Added 'Crypt::SSLeay' as a prerequisite. (Used by SOAP::Lite for HTTPS)

1.9  2010/09/17

  Added example script:
    list-configurations.pl

  Corrected:
    Syntax error on all example scripts.

  Improved:
    Command line parameter checks added to all example scripts.
    Accidental UTF characters (curly quotes) removed from POD.
    UserPerformAction() added to WISH LIST section of POD.
    Trailing spaces removed from all lines.
    Minor POD cleanups.

1.8  2010/09/13
  
  Added test:
    02-header.t - SOAP connection header tests
  
  Improved:
    GetMachineByName() - Clenaed up perl syntax.
    GetSingleConfigurationByName() - Corrected error in fault handling.
    LiveLink() - Clenaed up perl syntax.

  POD cleanup:
    Moved API method names from a head 2 level to smaller to reduce outline.
    Moved POD past __END__ token as per Perl best practices.
    Added section for returned values.
    Added section for example scripts.

  Added example scripts:
    conditions.pl
    delete-all.pl
    hwupgrade.pl
    list-machines.pl
    list-networks.pl
    list-organization.pl
    list-templates.pl
    list-users.pl
    list-workspaces.pl
    move.pl
  