@@ -1,10 +1,0 @@
-use ExtUtils::MakeMaker;
-
-WriteMakefile(
-    'NAME'         => 'VMware::API::LabManager',
-    'VERSION_FROM' => 'lib/VMware/API/LabManager.pm',
-    'PREREQ_PM'    => { 'SOAP::Lite' => '0.71', 'Net::SSL' => '0', 'Data::Dumper' => '0' },
-    ($] >= 5.005 ?
-      (ABSTRACT_FROM => 'lib/VMware/API/LabManager.pm',
-       AUTHOR     => 'Phillip Pollard <bennie@cpan.org>') : ()),
-);
